# Proc-Product-Photos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  rename_to_store.sh  rules.example.yaml  run_dimbo.sh
docs/: LICENSE_SERVER_SPEC.md  PORTAL_SPEC.md  PORTAL_SPEC_v2.md
process_images/: __init__.py  checkpoint.py  cli.py  config.py  contact_sheet.py  diff.py  io_utils.py  mapping.py  models.py  pipeline.py  reporting.py  statistics.py  validators.py
process_images/crop/: __init__.py  ai_fallback.py  base.py  canvas.py  categories.py  classical.py  finalize.py  masks.py  morphology.py
tests/: conftest.py  test_canvas.py  test_categories.py  test_checkpoint.py  test_classical_crop.py  test_cli.py  test_contact_sheet.py  test_diff.py  test_fallback.py  test_filename.py  test_flagging.py  test_incremental.py  test_io_utils.py  test_mapping.py  test_masks.py  test_pipeline.py  test_quality_gate.py  test_reporting.py  test_statistics.py
